Update Docker image tag to use correct Docker Hub username

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: docker.io/praisy0105/dbmspro:latest
+        tags: docker.io/mahimaj/dbmspro:latest
 
     - name: Run tests (if any)
       run: |
